# Pokle-Solver

./: Project_notes.md  README.md  pg1.prof  pg10.prof  pg11.prof  pg2.prof  pg3.prof  pg4.prof  pg5.prof  pg6.prof  pg7.prof  pg8.prof  pg9.prof  profile_after_review.prof  pyproject.toml  river1323.csv  test_interactive.py  test_sandbox.py  valid_tests.txt
.github/: copilot-instructions.md
src/pokle_solver/: __init__.py  auto_solve.py  card.py  cli.py  driver.py  example.py  proving_ground.py  solver.py  table.py
tests/: conftest.py  test_auto_solve.py  test_card.py  test_cli.py  test_solver_integration.py  test_solver_unit.py
