[project]
name = "pokle-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "PicklePicker64",email = "ryan.verhoef@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "numba (>=0.62.1,<0.63.0)",
]

[tool.poetry]
packages = [{include = "pokle_solver", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
